--- a/css/style.css
+++ b/css/style.css
@@ -101,7 +101,7 @@ h6 {
 .cover-letter-text {
     font-family: "Inter", sans-serif;
     font-optical-sizing: auto;
-    font-weight: bolder;
+    font-weight: 900;
     font-size: 52px;
 }
 
@@ -167,6 +167,19 @@ h6 {
 
 .active {
     font-weight: bolder;
+}
+
+.slogan {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding-bottom: 2.5rem;
+    font-family: "Inter", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 400;
+    font-style: normal;
+    font-size: 19px !important;
+    text-align: center;
 }
 
 /* PORTFOLIO */
@@ -359,7 +372,8 @@ h6 {
 /* MEDIA QUERYS */
 @media (max-width: 456px) {
     .cover-letter-text {
-        font-size: 14px !important;
+        font-weight: 900;
+        font-size: 15px !important;
         text-align: center;
     }
 }
