--- a/css/style.css
+++ b/css/style.css
@@ -38,7 +38,7 @@
     .navbar-inside-custom {
         -webkit-backdrop-filter: blur(10px);
         backdrop-filter: blur(10px);
-        background-color: rgba(255, 255, 255, 0.2);  
+        background-color: rgba(255, 255, 255, 0.2);
     }
 
 }
@@ -55,7 +55,7 @@
     height: 27px;
     margin-right: 5px;
 }
-    
+
 .add {
     display: flex;
     align-items: center;
@@ -180,6 +180,8 @@ h6 {
     font-style: normal;
     font-size: 19px !important;
     text-align: center;
+    padding-left: 4rem;
+    padding-right: 4rem;
 }
 
 /* PORTFOLIO */
@@ -376,6 +378,10 @@ h6 {
         font-size: 15px !important;
         text-align: center;
     }
+    .slogan {
+        font-size: 15.5px !important;
+        padding-bottom: 1.3rem;
+    }
 }
 
 @media (max-width: 576px) {
@@ -384,7 +390,8 @@ h6 {
     }
 
     .portfolio-text {
-        font-size: 20px !important;
+        font-size: 17px !important;
+        font-weight: 400;
     }
 
     .add {
@@ -434,6 +441,11 @@ h6 {
 
     .branding-img {
         margin-top: 4rem;
+    }
+
+    .slogan {
+        padding-left: 2rem;
+        padding-right: 2rem;
     }
 }
 
