--- a/css/style.css
+++ b/css/style.css
@@ -206,9 +206,9 @@ h6 {
     color: #6D7E8A;
     font-family: "Inter", sans-serif;
     font-optical-sizing: auto;
-    font-weight: 500;
+    font-weight: 400;
     font-style: normal;
-    font-size: 21px !important;
+    font-size: 19px !important;
     text-align: center;
     padding-bottom: 2rem;
     margin-bottom: 0;
@@ -516,6 +516,135 @@ h6 {
     color: #0293D7;
 }
 
+/* CONTACT */
+.contact {
+    padding: 5rem;
+}
+
+.contact-form {
+    padding-left: 5rem;
+    padding-right: 5rem;
+}
+
+.data-form {
+    border: 1px solid #D7D9D9;
+    padding: 1.5rem;
+    border-radius: 10px;
+    margin: 10px 20px 0px 0px;
+}
+
+.info {
+    border: 1px solid #D7D9D9;
+    padding: 1.5rem;
+    border-radius: 10px;
+    margin-bottom: 10px;
+    margin-top: 10px;
+}
+
+.map {
+    padding: 0.1rem;
+    border-radius: 10px;
+    margin-top: 10px;
+}
+
+#map {
+    height: 250px;
+    border-radius: 10px;
+}
+
+.contact-title {
+    font-family: "Inter", sans-serif;
+    font-weight: 700;
+    font-style: normal;
+    font-size: 21px;
+}
+
+.contact-text {
+    font-family: "Inter", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+    font-size: 14px;
+    margin-bottom: 15px;
+    color: #6D7E8A;
+}
+
+.form-control-text {
+    font-family: "Inter", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+    font-size: 13px !important;
+}
+
+.label-contact {
+    font-family: "Inter", sans-serif;
+    font-weight: 600;
+    font-style: normal;
+    font-size: 13px !important;
+}
+
+.btn-contact {
+    border-radius: 9px;
+    width: 100%;
+    height: 45px;
+    background: #38BCF7;
+    background: linear-gradient(90deg, rgba(56, 188, 247, 1) 0%, rgba(59, 130, 246, 1) 100%);
+    font-family: "Inter", sans-serif;
+    font-weight: 600;
+    font-style: normal;
+    font-size: 14px !important;
+    border: none;
+    color: white;
+}
+
+.banner-info-contact>i {
+    margin-right: 10px;
+}
+
+.banner-info-contact {
+    display: flex;
+    align-items: self-start;
+    justify-content: flex-start;
+    padding-bottom: 10px;
+    padding-top: 10px;
+}
+
+.banner-contact-title {
+    font-family: "Inter", sans-serif;
+    font-weight: 600;
+    font-style: normal;
+    font-size: 14px !important;
+    margin-bottom: 0;
+    padding-bottom: 0;
+}
+
+.banner-contact-text {
+    font-family: "Inter", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+    font-size: 14px !important;
+    color: #6D7E8A;
+    margin-bottom: 0;
+    padding-bottom: 0;
+}
+
+.col-md-7 {
+    margin-left: 0 !important;
+    padding-left: 0 !important;
+}
+
+.form-info {
+    margin-left: 0 !important;
+    padding-left: 0 !important;
+}
+
+.contact-content {
+    margin-top: 3rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+}
+
 /* FOOTER */
 .text-footer {
     font-family: "Inter", sans-serif;
@@ -578,6 +707,10 @@ footer {
         padding-left: 1rem !important;
         padding-right: 1rem !important;
     }
+    .form-info{
+        margin: 0 !important;
+        padding: 0 !important;
+    }
 }
 
 @media (max-width: 576px) {
@@ -586,7 +719,7 @@ footer {
     }
 
     .portfolio-text {
-        font-size: 17px !important;
+        font-size: 16px !important;
         font-weight: 400;
     }
 
@@ -597,12 +730,18 @@ footer {
     .conver-text {
         padding-top: 1.5rem !important;
     }
+
     .container-team {
         padding: 1rem !important;
     }
+
     .team {
         display: grid;
         grid-template-columns: repeat(1, 1fr) !important;
+    }
+    .nav-footer {
+        padding-left: 3rem;
+        padding-right: 3rem;
     }
 }
 
@@ -653,8 +792,29 @@ footer {
     .col-services {
         width: 100%;
     }
+
     .container-team {
         padding: 0;
+    }
+    .form-info>.row{
+        margin: 0 !important;
+        padding: 0 !important;
+    }
+    .data-form {
+        margin: 10px 0px 0px 0px;
+    }
+    .map {
+        width: 100% auto;
+    }
+    #map {
+        width: auto !important;
+    }
+    .info {
+        margin-top: 20px;
+    }
+    .text-footer {
+        margin-bottom: 0;
+        padding-bottom: 0;
     }
 }
 
@@ -683,6 +843,20 @@ footer {
         display: grid;
         grid-template-columns: repeat(2, 1fr);
     }
+
+    .contact {
+        padding-left: 1rem !important;
+        padding-right: 1rem !important;
+    }
+
+
+    .footer-final {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        flex-direction: column !important;
+        text-align: center;
+    }
 }
 
 
@@ -710,6 +884,15 @@ footer {
         align-items: center;
         justify-content: center;
     }
+
+    .contact-form {
+        padding-left: 1rem !important;
+        padding-right: 1rem !important;
+    }
+
+    #map {
+        height: 225px;
+    }
 }
 
 
@@ -722,5 +905,10 @@ footer {
     .team {
         padding-left: 1rem;
         padding-right: 1rem;
+    }
+
+    .contact-form {
+        padding-left: 3rem;
+        padding-right: 3rem;
     }
 }
