--- a/views/req_demo.html
+++ b/views/req_demo.html
@@ -4,24 +4,16 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>NextLink Systems</title>
-    <!--  -->
-    <script src="https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/js/splide.min.js"></script>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/css/splide.min.css">
+    <title>NextLink Systems - demos</title>
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/demo.css">
     <link rel="stylesheet" href="../css/effects.css">
+    <link rel="stylesheet" href="../css/infinite.css">
     <link href='https://cdn.boxicons.com/fonts/basic/boxicons.min.css' rel='stylesheet'>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
-
-    <!-- Map -->
-    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
-        integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY=" crossorigin="" />
-    <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
-        integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo=" crossorigin=""></script>
-    <link rel="shortcut icon" href="./src/img/icon.PNG" type="image/x-icon">
+    <link rel="shortcut icon" href="../src/img/icon.PNG" type="image/x-icon">
 </head>
 
 <body>
@@ -43,7 +35,7 @@
                             <div class="collapse navbar-collapse items-nav" id="navbarText">
                                 <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
                                     <li class="nav-item">
-                                        <a class="nav-link active" aria-current="page" href="#">HOME</a>
+                                        <a class="nav-link active" aria-current="page" href="../index.html">HOME</a>
                                     </li>
                                     <li class="nav-item">
                                         <a class="nav-link" href="#">SOLUCIONES</a>
@@ -59,7 +51,6 @@
                                     </li>
                                 </ul>
                                 <span class="navbar-text">
-                                    <button class="btn-login">Inicio Sesión</button>
                                     <button class="btn-demo">Solicitar demo</button>
                                 </span>
                             </div>
@@ -67,7 +58,176 @@
                     </nav>
                 </div>
                 <div class="title">
-                    hola
+                    <h2 class="title-demo">Agendar demosrtación</h2>
+                    <p class="text-demo">Talk to a Bindplane expert about your requirements, technology stack, and
+                        timeline. Complete the form and we’ll make sure to reach out.</p>
+                </div>
+                <div class="contact-form-demo">
+                    <div class="row">
+                        <div class="col-md-7 padd-inside">
+                            <div class="contact-form">
+                                <div class="form">
+                                    <div class="row">
+                                        <div class="col-md-6">
+                                            <div class="mb-3">
+                                                <label for="" class="form-label label-custom">Nombre</label>
+                                                <input type="text" class="form-input-contact" id=""
+                                                    placeholder="Tu nombre" aria-describedby="emailHelp">
+                                            </div>
+                                        </div>
+                                        <div class="col-md-6">
+                                            <div class="mb-3">
+                                                <label for="" class="form-label label-custom">Apellidos</label>
+                                                <input type="text" class="form-input-contact" id=""
+                                                    placeholder="Tu apellido" aria-describedby="emailHelp">
+                                            </div>
+                                        </div>
+                                        <div class="col-md-6">
+                                            <div class="mb-3">
+                                                <label for="" class="form-label label-custom">Correo Electrónico</label>
+                                                <input type="text" class="form-input-contact" id=""
+                                                    placeholder="tu@correo.com" aria-describedby="emailHelp">
+                                            </div>
+                                        </div>
+                                        <div class="col-md-6">
+                                            <div class="mb-3">
+                                                <label for="" class="form-label label-custom">Compañía</label>
+                                                <input type="text" class="form-input-contact" id=""
+                                                    placeholder="Acme. corp" aria-describedby="emailHelp">
+                                            </div>
+                                        </div>
+                                        <div class="col-md-12">
+                                            <div class="mb-3">
+                                                <label for="" class="form-label label-custom">Dónde escuchó de
+                                                    nosotros?</label>
+                                                <input type="text" class="form-input-contact" id=""
+                                                    placeholder="Escriba su mensaje..." aria-describedby="emailHelp">
+                                            </div>
+                                        </div>
+                                        <div class="mb-2">
+                                            <label for="exampleFormControlTextarea1"
+                                                class="form-label label-custom">Detalles del proyecto o
+                                                preguntas:</label>
+                                            <textarea class="form-input-contact"
+                                                placeholder="Comparte los detalles con nosotros..."
+                                                id="exampleFormControlTextarea1" rows="3"></textarea>
+                                        </div>
+                                        <div class="mb-3">
+                                            <div class="checkbox-item">
+                                                <input class="form-check-input" type="checkbox" value=""
+                                                    id="checkDefault">
+                                                <label class="form-check-label label-mail-contact" for="checkDefault">
+                                                    Me gustaría recibir notificaciones por correo
+                                                </label>
+                                            </div>
+                                        </div>
+                                        <div class="mb-1 mt-3">
+                                            <div class="row">
+                                                <div class="col-md-6">
+                                                    <div class="col-md-12 ">
+                                                        <p class="label-send-form">Al enviar este formulario acepto los
+                                                            <span class="terms">terminos y condiciones</span>
+                                                        </p>
+                                                    </div>
+                                                </div>
+                                                <div class="col-md-6">
+                                                    <button class="send-data">Agendar cita</button>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-5 padd-inside">
+                            <div class="item-demo">
+                                <div class="icon-demo">
+                                    <i class='bx  bx-plug-connect'></i>
+                                </div>
+                                <div class="text-demo-side">
+                                    <h4 class="title-demo-side">Conecta con nosotros</h4>
+                                    <p class="text-demo-side">Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                                        Quia, Natus doloremque, quia dicta explicabo voluptatibus illum iste aspernatur
+                                        nihil minus dolores.</p>
+                                </div>
+                            </div>
+                            <div class="item-demo mt-3">
+                                <div class="item-demo">
+                                    <div class="icon-demo">
+                                        <i class='bx  bx-shield'></i>
+                                    </div>
+                                    <div class="text-demo-side">
+                                        <h4 class="title-demo-side">Asegura tus datos</h4>
+                                        <p class="text-demo-side">Lorem, ipsum dolor sit amet consectetur adipisicing
+                                            elit. Quia, Natus doloremque, quia dicta explicabo voluptatibus illum iste
+                                            aspernatur nihil minus dolores.</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="item-demo mt-3">
+                                <div class="item-demo">
+                                    <div class="icon-demo">
+                                        <i class='bx  bx-chart-network'></i>
+                                    </div>
+                                    <div class="text-demo-side">
+                                        <h4 class="title-demo-side">Aumenta la productividad</h4>
+                                        <p class="text-demo-side">Lorem, ipsum dolor sit amet consectetur adipisicing
+                                            elit. Quia, Natus doloremque, quia dicta explicabo voluptatibus illum iste
+                                            aspernatur nihil minus dolores.</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="softwares">
+                                <div class="software-logos">
+                                    <h6 class="solutions">NUESTRAS SOLUCIONES</h6>
+                                    <div class="divider"></div>
+                                </div>
+                                <div class="slider">
+                                    <div class="slide-track">
+                                        <div class="slide">
+                                            <img src="https://logos-world.net/wp-content/uploads/2023/08/React-Emblem.png" height="68" alt="" />
+                                        </div>
+                                        <div class="slide">
+                                            <img src="https://cdn.freebiesupply.com/logos/large/2x/mysql-1-logo-png-transparent.png" height="68" alt="" />
+                                        </div>
+                                        <div class="slide">
+                                            <img src="https://images.icon-icons.com/3261/PNG/512/flutter_logo_icon_206756.png" height="68" alt="" />
+                                        </div>
+                                        <div class="slide">
+                                            <img src="https://img.icons8.com/ios_filled/512/php-logo.png" height="68" alt="" />
+                                        </div>
+                                        <div class="slide">
+                                            <img src="../src/img/nodejs-logo-black-and-white.png" height="38" width="auto" alt="" />
+                                        </div>
+                                        <div class="slide">
+                                            <img src="https://www.svgrepo.com/show/25424/ubuntu-logo.svg" height="68" alt="" />
+                                        </div>
+                                        <div class="slide">
+                                            <img src="https://logos-world.net/wp-content/uploads/2023/08/React-Emblem.png" height="68" alt="" />
+                                        </div>
+                                        <div class="slide">
+                                            <img src="https://cdn.freebiesupply.com/logos/large/2x/mysql-1-logo-png-transparent.png" height="68" alt="" />
+                                        </div>
+                                        <div class="slide">
+                                            <img src="https://images.icon-icons.com/3261/PNG/512/flutter_logo_icon_206756.png" height="68" alt="" />
+                                        </div>
+                                        <div class="slide">
+                                            <img src="https://img.icons8.com/ios_filled/512/php-logo.png" height="68" alt="" />
+                                        </div>
+                                        <div class="slide">
+                                            <img src="https://www.svgrepo.com/show/25424/ubuntu-logo.svg" height="68" alt="" />
+                                        </div>
+                                        <div class="slide">
+                                            <img src="https://logos-world.net/wp-content/uploads/2023/08/React-Emblem.png" height="68" alt="" />
+                                        </div>
+                                        <div class="slide">
+                                            <img src="https://images.icon-icons.com/3261/PNG/512/flutter_logo_icon_206756.png" height="68" alt="" />
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
@@ -136,26 +296,6 @@
         </div>
     </footer>
 
-    <script type="importmap">
-        {
-            "imports": {
-            "@splidejs/splide": "https://cdn.jsdelivr.net/npm/@splidejs/splide@latest/dist/js/splide.esm.min.js"
-            }
-        }
-    </script>
-
-    <script>
-        var map = L.map('map').setView([13.697214, -89.191335], 13);
-        L.tileLayer('https://tile.openstreetmap.org/{z}/{x}/{y}.png', {
-            attribution: ''
-        }).addTo(map);
-
-        L.marker([13.697214, -89.191335]).addTo(map)
-            .bindPopup('We are here!.')
-            .openPopup();
-    </script>
-
-    <script type="module" src="./js/splide/splide.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO"
         crossorigin="anonymous"></script>
