Req site complete

--- a/views/req_demo.html
+++ b/views/req_demo.html
@@ -58,9 +58,10 @@
                     </nav>
                 </div>
                 <div class="title">
-                    <h2 class="title-demo">Agendar demosrtación</h2>
-                    <p class="text-demo">Talk to a Bindplane expert about your requirements, technology stack, and
-                        timeline. Complete the form and we’ll make sure to reach out.</p>
+                    <h2 class="title-demo">Agendar demostración</h2>
+                    <p class="text-demo">Hable con un experto de <span class="fw-bold">Next Link Systems</span> sobre
+                        sus requisitos, su idea tecnológica o su cronograma.
+                        Complete el formulario y nos pondremos en contacto con usted..</p>
                 </div>
                 <div class="contact-form-demo">
                     <div class="row">
@@ -185,47 +186,117 @@
                                 <div class="slider">
                                     <div class="slide-track">
                                         <div class="slide">
-                                            <img src="https://logos-world.net/wp-content/uploads/2023/08/React-Emblem.png" height="68" alt="" />
+                                            <img src="https://logos-world.net/wp-content/uploads/2023/08/React-Emblem.png"
+                                                height="68" alt="" />
                                         </div>
                                         <div class="slide">
-                                            <img src="https://cdn.freebiesupply.com/logos/large/2x/mysql-1-logo-png-transparent.png" height="68" alt="" />
+                                            <img src="https://cdn.freebiesupply.com/logos/large/2x/mysql-1-logo-png-transparent.png"
+                                                height="68" alt="" />
                                         </div>
                                         <div class="slide">
-                                            <img src="https://images.icon-icons.com/3261/PNG/512/flutter_logo_icon_206756.png" height="68" alt="" />
+                                            <img src="https://images.icon-icons.com/3261/PNG/512/flutter_logo_icon_206756.png"
+                                                height="68" alt="" />
                                         </div>
                                         <div class="slide">
-                                            <img src="https://img.icons8.com/ios_filled/512/php-logo.png" height="68" alt="" />
+                                            <img src="https://img.icons8.com/ios_filled/512/php-logo.png" height="68"
+                                                alt="" />
                                         </div>
                                         <div class="slide">
-                                            <img src="../src/img/nodejs-logo-black-and-white.png" height="38" width="auto" alt="" />
+                                            <img src="../src/img/nodejs-logo-black-and-white.png" height="38"
+                                                width="auto" alt="" />
                                         </div>
                                         <div class="slide">
-                                            <img src="https://www.svgrepo.com/show/25424/ubuntu-logo.svg" height="68" alt="" />
+                                            <img src="https://www.svgrepo.com/show/25424/ubuntu-logo.svg" height="68"
+                                                alt="" />
                                         </div>
                                         <div class="slide">
-                                            <img src="https://logos-world.net/wp-content/uploads/2023/08/React-Emblem.png" height="68" alt="" />
+                                            <img src="https://logos-world.net/wp-content/uploads/2023/08/React-Emblem.png"
+                                                height="68" alt="" />
                                         </div>
                                         <div class="slide">
-                                            <img src="https://cdn.freebiesupply.com/logos/large/2x/mysql-1-logo-png-transparent.png" height="68" alt="" />
+                                            <img src="https://cdn.freebiesupply.com/logos/large/2x/mysql-1-logo-png-transparent.png"
+                                                height="68" alt="" />
                                         </div>
                                         <div class="slide">
-                                            <img src="https://images.icon-icons.com/3261/PNG/512/flutter_logo_icon_206756.png" height="68" alt="" />
+                                            <img src="https://images.icon-icons.com/3261/PNG/512/flutter_logo_icon_206756.png"
+                                                height="68" alt="" />
                                         </div>
                                         <div class="slide">
-                                            <img src="https://img.icons8.com/ios_filled/512/php-logo.png" height="68" alt="" />
+                                            <img src="https://img.icons8.com/ios_filled/512/php-logo.png" height="68"
+                                                alt="" />
                                         </div>
                                         <div class="slide">
-                                            <img src="https://www.svgrepo.com/show/25424/ubuntu-logo.svg" height="68" alt="" />
+                                            <img src="https://www.svgrepo.com/show/25424/ubuntu-logo.svg" height="68"
+                                                alt="" />
                                         </div>
                                         <div class="slide">
-                                            <img src="https://logos-world.net/wp-content/uploads/2023/08/React-Emblem.png" height="68" alt="" />
+                                            <img src="https://logos-world.net/wp-content/uploads/2023/08/React-Emblem.png"
+                                                height="68" alt="" />
                                         </div>
                                         <div class="slide">
-                                            <img src="https://images.icon-icons.com/3261/PNG/512/flutter_logo_icon_206756.png" height="68" alt="" />
+                                            <img src="https://images.icon-icons.com/3261/PNG/512/flutter_logo_icon_206756.png"
+                                                height="68" alt="" />
                                         </div>
                                     </div>
                                 </div>
                             </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="info-extra">
+        <div class="container">
+            <div class="title">
+                <h2 class="title-demo">¿Buscabas algo más?</h2>
+                <p class="text-demo">Explora más opciones y encuentra lo que buscas. Nuestro sitio web ofrece una amplia
+                    gama de recursos, productos y soluciones para satisfacer tus necesidades.</p>
+            </div>
+            <div class="info-extra-cards">
+                <div class="row info-extra-cards-items">
+                    <div class="card">
+                        <div class="card-body">
+                            
+                            <div class="icon-demo-extra">
+                                <i class='bx  bx-file-detail'  ></i> 
+                            </div>
+
+                            <h4 class="title-extra">Documentación</h4>
+                            <p class="text-extra">Explore nuestra <span class="text-info-extra">documentación</span> para obtener información y conocimientos valiosos sobre nuestros productos y servicios.</p>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <div class="card-body">
+
+                            <div class="icon-demo-extra">
+                                <i class='bx  bx-headphone-mic'  ></i> 
+                            </div>
+
+                            <h4 class="title-extra">Soporte</h4>
+                            <p class="text-extra">Nuestros ingenieros de soporte le brindan asistencia experta. Visite nuestro <span class="text-info-extra">portal de clientes</span>.</p>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <div class="card-body">
+
+                            <div class="icon-demo-extra">
+                                <i class='bx  bx-cursor'  ></i> 
+                            </div>
+
+                            <h4 class="title-extra">Sobre Nosotros</h4>
+                            <p class="text-extra"><span class="text-info-extra">Conozca más </span> sobre nuestra misión, valores y nuestro compromiso de ofrecer productos excepcionales.</p>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <div class="card-body">
+
+                            <div class="icon-demo-extra">
+                                <i class='bx  bx-mail-open'  ></i> 
+                            </div>
+
+                            <h4 class="title-extra">Contacto General</h4>
+                            <p class="text-extra">Para preguntas generales, comentarios o sugerencias, comuníquese con <span class="text-info-extra">info@nextlinksystems.com</span></p>
                         </div>
                     </div>
                 </div>
